--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hello there2</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione porro et esse? Doloribus nostrum ad id omnis, magni iste alias quo sit dolorem magnam quae? Corrupti, officiis. Debitis, corrupti beatae.</p>
+    <p>This is new paragraph.</p>
 </body>
 </html>
