--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hello there2</h1>
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ratione porro et esse? Doloribus nostrum ad id omnis, magni iste alias quo sit dolorem magnam quae? Corrupti, officiis. Debitis, corrupti beatae.</p>
     <p>This is new paragraph.</p>
+    <span>This is a span element</span>
 </body>
 </html>
